refactor(racingcar): 자동차 입력 문자열 검증 책임을 Cars에서 Service로 이전
- 자동차 입력 문자열 값 자체에 대한 검증 책임을, tryCountInput 검증 책임과 동일하게 service 레이어로 이전