@@ -1,19 +1,17 @@
 package racingcar.domain;
 
-import racingcar.exception.InvalidCarsException;
+import racingcar.exception.InvalidCarException;
 import racingcar.exception.Message;
 import racingcar.util.RandomNumberGenerator;
 import racingcar.util.Validator;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Cars {
-    private static final String COMMA = ",";
     private final List<Car> cars;
 
-    public Cars(String carNames) {
+    public Cars(List<String> carNames) {
         validateCarNames(carNames);
         this.cars = createCars(carNames);
     }
@@ -37,10 +35,8 @@ public class Cars {
         return cars;
     }
 
-    private List<Car> createCars(String carNames) {
-        List<String> carNameList = Arrays.asList(carNames.split(COMMA));
-        validateNoDuplicateNames(carNameList);
-        return carNameList.stream().map(Car::new).collect(Collectors.toList());
+    private List<Car> createCars(List<String> carNames) {
+        return carNames.stream().map(Car::new).toList();
     }
 
     private int findMaxDistance(List<Car> cars) {
@@ -57,23 +53,11 @@ public class Cars {
                 .toList();
     }
 
-    private void validateCarNames(String carNames) {
-        validateCommaNotAtEnds(carNames);
-        validateNoConsecutiveCommas(carNames);
+    private void validateCarNames(List<String> carNames) {
+        checkNoDuplicateNames(carNames);
     }
-
-    private void validateCommaNotAtEnds(String carNames) {
-        if (!Validator.startsOrEndsWith(carNames, COMMA)) return;
-        throw new InvalidCarsException(Message.CAR_NAMES_COMMA_AT_START_OR_END.getMessage());
-    }
-
-    private void validateNoConsecutiveCommas(String carNames) {
-        if (!Validator.containsConsecutiveSubstring(carNames, COMMA)) return;
-        throw new InvalidCarsException(Message.CAR_NAMES_CONSECUTIVE_COMMA_PRESENT.getMessage());
-    }
-
-    private void validateNoDuplicateNames(List<String> carNames) {
+    private void checkNoDuplicateNames(List<String> carNames) {
         if (!Validator.hasDuplicates(carNames)) return;
-        throw new InvalidCarsException(Message.CAR_NAME_DUPLICATED.getMessage());
+        throw new InvalidCarException(Message.CAR_NAME_DUPLICATED.getMessage());
     }
 }
